force-app/main/default/objects/Offer__c/fields/Offer_Test__c.field-meta.xml
<CustomField>
    <fullName>Offer_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Offer Test</description>
    <inlineHelpText>Offer Test</inlineHelpText>
    <label>Offer Test</label>
    <type>Checkbox</type>
</CustomField>