force-app/main/default/objects/Offer__c/fields/Quick_Offer__c.field-meta.xml
<CustomField>
    <fullName>Quick_Offer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Testing</description>
    <inlineHelpText>Testng</inlineHelpText>
    <label>Quick Offer</label>
    <type>Checkbox</type>
</CustomField>