force-app/main/default/objects/Offer__c/fields/Test_Offer__c.field-meta.xml
<CustomField>
    <fullName>Test_Offer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Test</description>
    <inlineHelpText>Test</inlineHelpText>
    <label>Test Offer</label>
    <type>Checkbox</type>
</CustomField>